--- a/views/About.ejs
+++ b/views/About.ejs
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400;0,500;1,400;1,500&display=swap"
     rel="stylesheet">
 
-  <title>Around the world in 18 stops</title>
+  <title>TravelSmart</title>
   <link rel="icon" href="Images/icon.png" type="image/x-icon">
 </head>
 
@@ -62,13 +62,13 @@
         you!
       </p>
       <p>
-        "Around the World" is a platform where you can find optimal routes for various trip types. We offer you the
+        "TravelSmart" is a platform where you can find optimal routes for various trip types. We offer you the
         choice to optimize routes by either distance or time. But that's not all. You also receive route recommendations
         tailored to your chosen mode of transport. Plus, you can choose between two types of journeys: round trips
         (where the starting and ending locations are the same) or one-way trips.
       </p>
       <p>
-        Importantly, "Around the World" is more than just a tour planning platform. Beyond personal trips, it can also
+        Importantly, "TravelSmart" is more than just a tour planning platform. Beyond personal trips, it can also
         assist with heavy luggage transportation via trucks and similar vehicles, where optimizing costs (and
         consequently distance) is paramount. Travel agencies and bus companies can leverage our platform to minimize
         travel expenses. Whether for road trips, walking excursions, or other needs, our tool is versatile and always at
@@ -80,11 +80,11 @@
       <h2 class="pb-4">Developed by:</h2>
 
       <div class="card" style="width: 12em;">
-        <img src="Images/croping71.png" class="card-img-top" alt="..." width="5px">
+        <!-- <img src="Images/croping71.png" class="card-img-top" alt="..." width="5px"> -->
         <div class="card-body">
-          <h5 class="card-title">Onkar Yadav</h5>
-          <p class="card-text"> Frontend Developer</p>
-          <a href="https://www.linkedin.com/in/onkar-yadav-5713711ba/" class="btn btn-primary">Linkedin Profile</a>
+          <h5 class="card-title">vbhandar</h5>
+          <p class="card-text"> Backend Developer</p>
+          <a href="https://www.linkedin.com/in/vyankatesh-bhandarkar-7041b5232/" class="btn btn-primary">Linkedin Profile</a>
         </div>
       </div>
 
@@ -92,9 +92,9 @@
   </div>
 
   <footer>
-    <span>
-      <img src="Images/icon.png" alt="" width="30px" height="30px">
-    </span>
+    <!-- <span>
+      <img src="" alt="" width="30px" height="30px">
+    </span> -->
 
     <div class="">
       <a href="createTrip.html">Create a trip</a>|
@@ -109,7 +109,7 @@
 
   </footer>
   <div class="cr">
-    Copyright © 2022 Around the world
+    Copyright © 2023 TravelSmart
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
