--- a/views/HowToUse.ejs
+++ b/views/HowToUse.ejs
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400;0,500;1,400;1,500&display=swap"
     rel="stylesheet">
 
-  <title>Around the world in 18 stops</title>
+  <title>TravelSmart - Simplify Your Travel</title>
   <link rel="icon" href="Images/icon.png" type="image/x-icon">
 </head>
 
@@ -58,13 +58,11 @@
 
     <div class="htu">
       <h1 class="pb-5">How to Use</h1>
-      <h4 class="pb-3">Follow the procedure below in the specified order:</h4>
-      <p>1. Select your trip type.</p>
-      <p>2. If you want a different kind of trip, click on the custom tour button and select the type of trip, mode of
-        travel, and optimization options. <b>Remember, you should either select a trip type option or click on the
-          custom trip button. If you do both, the output will be based on the latter.</b></p>
-      <p>3. Now enter the number of cities for your trip. You can enter up to 18 numbers. <b>Don't forget to click the
-          submit button next to it.</b></p>
+      <h4 class="pb-3">Follow the procedure below :</h4>
+      <p>1. Select your trip type. (Tour , Goods Transportation , Roadtrip , Walking Trip , Passenger Buses)</p>
+      <br>2. Customize your trip type by clicking on tour button and selecting Type of trip , mode of travel, and optimizatioon options .  <br>  <b>Remember, you should either select a trip type option or click on the
+          custom trip button. If you do both, the output will be based on the latter.</b></br>
+      <p>3. Enter planned number of cities and press SUBMIT button without hesitation .</b></p>
       <p>4. If you missed a step from above before clicking the submit button, you'll receive an error. Read the error
         message carefully and follow the instructions provided.</p>
       <p>5. If it's submitted without any errors, you can proceed.</p>
@@ -111,7 +109,7 @@
 
   </footer>
   <div class="cr">
-    Copyright © 2022 Around the world
+    Copyright © 2023 TravelSmart - Simplify Your Travel
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
