--- a/views/createTrip.ejs
+++ b/views/createTrip.ejs
@@ -16,11 +16,12 @@
     rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
-  <title>Around the world in 18 stops</title>
+  <title>TravelSmart - Simplify Your Travel</title>
   <link rel="icon" href="Images/icon.png" type="image/x-icon">
 </head>
 
 <body>
+
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
@@ -61,9 +62,10 @@
 
   <header>
     <h1 class="text-center pt-4">
-      Around the world
+      TravelSmart 
     </h1>
-    <h5 class="text-center pb-3"><i>in 18 stops !</i></h5>
+
+    <h5 class="text-center pb-3"><i>- Simplify Your Travel</i></h5>
     <div class="moving-text-par">
       <div class="moving-text-child">
         <marquee behaviour="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
@@ -188,7 +190,7 @@
 
   </footer>
   <div class="cr">
-    Copyright © 2022 Around the world
+    Copyright © 2023 TravelSmart - Simplify Your Travel
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
