--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400;0,500;1,400;1,500&display=swap"
     rel="stylesheet">
 
-  <title>Around the world in 18 stops</title>
+  <title>TravelSmart - Simplify Your Travel</title>
   <link rel="icon" href="Images/icon.png" type="image/x-icon">
 
 </head>
@@ -44,6 +44,13 @@
   </nav>
 
   <header>
+    <button left :20px onclick="showAlert()">Login Credentials</button>
+
+    <script>
+        function showAlert() {
+            alert('You can directly use below credentials to login into the website\nemail - asd@gmail.com\npassword - asd ');
+        }
+    </script>
     <h1 class=" text-center pt-5 pb-2"> <i>Discover the Ultimate Routes for Your Tours!</i> </h1>
     <h6 class=" text-center"> Determines the optimal routes for tours covering multiple destinations,optimizing either
       distance or time</h6>
@@ -147,7 +154,7 @@
 
   </footer>
   <div class="cr">
-    Copyright © 2022 Around the world
+    Copyright © 2023 TravelSmart - Simplify Your Travel
   </div>
   <script src="index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
