--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
     integrity="sha384-w/9IpQGfR9U9FZ5hBfW1owF/9zNkwfF23EFMgHzF6Dvk/e3tMA6t9eH27D0n5KR5" crossorigin="anonymous">
 
   <link rel="stylesheet" href="login.css">
-  <title>Around the world in 18 stops</title>
+  <title>TravelSmart - Simplify Your Travel</title>
   <link rel="icon" href="Images/icon.png" type="image/x-icon">
 </head>
 
