--- a/views/currentTrip.ejs
+++ b/views/currentTrip.ejs
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="currentTrip.css">
-  <title>Around the world in 18 stops</title>
+  <title>TravelSmart - Simplify Your Travel</title>
   <link rel="icon" href="Images/icon.png" type="image/x-icon">
 </head>
 
@@ -73,7 +73,7 @@
 
   </footer>
   <div class="cr">
-    Copyright © 2022 Around the world
+    Copyright © 2023 TravelSmart - Simplify Your Travel
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
