--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,12 +44,8 @@
   </nav>
 
   <header>
-    <button left :20px onclick="showAlert()">Login Credentials</button>
-
     <script>
-        function showAlert() {
-            alert('You can directly use below credentials to login into the website\nemail - asd@gmail.com\npassword - asd ');
-        }
+    alert("You can directly use below credentials to login into the website\nemail - asd@gmail.com\npassword - asd ");    
     </script>
     <h1 class=" text-center pt-5 pb-2"> <i>Discover the Ultimate Routes for Your Tours!</i> </h1>
     <h6 class=" text-center"> Determines the optimal routes for tours covering multiple destinations,optimizing either
